2005-03-31  Karl Berry  <karl@freefriends.org>

	* textmodes/tex-mode.el (tex-compile): shell-quote-argument,
	not comint-quote-filename.

2005-03-31  Olive Lin  <olive.lin@versateladsl.be> (tiny change)

	* textmodes/tex-mode.el (tex-start-tex) shell-quote-argument,
	not comint-quote-filename.

2005-03-31  Thien-Thi Nguyen  <ttn@gnu.org>

	* help-fns.el (help-with-tutorial): Revert last change.

2005-03-31  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-base.el (cua-scroll-down): Add CUA property.

2005-03-30  Paul Eggert  <eggert@cs.ucla.edu>

	* calendar/cal-china.el: Update reference to "Calendrical
	Calculations" book; there's a new edition.
	* calendar/cal-coptic.el: Likewise.
	* calendar/cal-french.el: Likewise.
	* calendar/cal-hebrew.el: Likewise.
	* calendar/cal-islam.el: Likewise.
	* calendar/cal-iso.el: Likewise.
	* calendar/cal-julian.el: Likewise.
	* calendar/cal-mayan.el: Likewise.
	* calendar/cal-persia.el: Likewise.
	* calendar/calendar.el: Likewise.
	* calendar/holidays.el: Likewise.
	* calendar/lunar.el: Likewise.
	* calendar/solar.el: Likewise.

	* calendar/calendar.el (calendar-day-abbrev-array): Remove trailing
	white space from doc string.

2005-03-30  Jay Belanger  <belanger@truman.edu>

	* calc/calc-help.el (calc-full-help): Remove email address.

2005-03-30  Thien-Thi Nguyen  <ttn@gnu.org>

	* help-fns.el (help-with-tutorial): Delete title line.

2005-03-30  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/cal-x.el (calendar-one-frame-setup)
	(calendar-only-one-frame-setup, calendar-two-frame-setup): Use t
	rather than 'symbol for set-window-dedicated-p.

	* calendar/appt.el (appt-buffer-name): Make it a constant.
	(appt-add): Doc fix.

	* filesets.el (filesets-menu-path, filesets-menu-before)
	(filesets-menu-in-menu): Doc fix.  Now valid in GNU Emacs.
	(filesets-menu-cache-file): Use directory ~/.emacs.d.
	(filesets-add-submenu): Delete and use add-submenu instead.

2005-03-30  Carsten Dominik  <dominik@science.uva.nl>
